objects/pse__Team_Schedule_Template__c.object
<CustomObject>
    <description>Template for team schedule.</description>
    <fields>
        <fullName>pse__Date_Last_Used__c</fullName>
        <inlineHelpText>The date the Team Schedule Template was last used for a Team Schedule.</inlineHelpText>
        <label>Date Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the schedule template is the default for the team.</description>
        <inlineHelpText>If selected, the schedule template is the default for the team.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The team associated with the template.</description>
        <inlineHelpText>The team associated with the template.</inlineHelpText>
        <label>Team</label>
        <referenceTo>pse__Team__c</referenceTo>
        <relationshipLabel>Team Schedule Templates</relationshipLabel>
        <relationshipName>Team_Schedule_Templates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Team Schedule Template</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Schedule Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Schedule Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>